Fix title overlap on mobile

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -141,6 +141,11 @@ p {
     left: 10px;
 }
 
+.title-center {
+    margin-left: 16px;
+    margin-right: 20px;
+}
+
 .home a, h2 a {
     color: $light-color !important;
 }
